# local-mcp

./: .env.example  .gitignore  README.md  document_parser.py  fetcher.py  local-ai-toolkit.html  ocr.py  openwebui_tool.py  prompt.md  prompt.txt  pyproject.toml  requirements.txt  searxng-settings.yml  searxng.py  server.py  setup_and_run.py
docs/: ARCHITECTURE.md  README.md  agent_teams.md  deep_research.md  extract_content.md  extract_image_text.md  extract_urls.md  generate_file.md  low_model_compatibility.md  parse_document.md  schedule_task.md  smart_search.md  web_fetch.md  web_search.md  web_search_to_file.md  web_summarize.md
integrations/: openwebui_tool.py
local_mcp/: __init__.py  __main__.py  app.py  cli.py
local_mcp/agents/: __init__.py  runner.py  teams.py  toolbelt.py
local_mcp/automations/: __init__.py  scheduler.py
local_mcp/documents/: __init__.py  api.py  formatting.py  models.py  parsers.py  service.py  source.py
local_mcp/file_generation/: __init__.py  markdown.py  pdf.py  powerpoint.py  word.py
local_mcp/gemini/: __init__.py  client.py
local_mcp/llm/: __init__.py  client.py
local_mcp/ocr/: __init__.py  tesseract.py
local_mcp/ollama/: __init__.py  client.py
local_mcp/search/: __init__.py
local_mcp/shared/: __init__.py  errors.py  files.py  guidance.py  progress.py  summarize.py  urls.py
local_mcp/tools/: __init__.py  agents.py  automation.py  deep_research.py  documents.py  file_generation.py  ocr.py  search.py  simple.py  smart_search.py  web.py
local_mcp/web/: __init__.py  content.py  html.py  sitemap.py
tests/: test_agent_teams.py  test_automations.py  test_compatibility_imports.py  test_deep_research_tool.py  test_document_helpers.py  test_file_generation.py  test_search_helpers.py  test_shared_urls.py  test_smart_search_tool.py  test_summarize_helpers.py  test_web_fetch_tool.py  test_web_helpers.py
