[project]
name = "local-mcp"
version = "1.0.0"
description = "MCP server for SearXNG web search, URL extraction, content extraction, and OCR"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "ISC" }
keywords = ["mcp", "crawler", "links", "sitemap", "crawl4ai", "ocr", "tesseract", "searxng", "search"]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "markdownify>=0.13",
    "python-dotenv>=1.0",
    "Pillow>=10.0",
    "pytesseract>=0.3.13",
    "requests>=2.31.0",
]

[project.optional-dependencies]
# Browser-render fallback used by extract_urls when static HTML has no links.
# Heavy (playwright + ML stack); excluded from serverless deploys. Install with:
#   pip install "local-mcp[browser]"
browser = ["crawl4ai>=0.5.0"]

[project.scripts]
local-mcp = "server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server", "fetcher", "extract", "errors", "sitemap", "ocr", "searxng"]
